codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__custom_provider_status_usage.snap
---
source: tui/src/chatwidget/tests/status_command_tests.rs
assertion_line: 43
expression: lines_to_single_string(&cell.display_lines(100))
---
/status

  >_ OpenAI Codex (v0.0.0)

  Model:                    GPT-5.6-Sol (reasoning low, summaries auto)
  Model provider:           custom
  Directory:                /tmp/project
  Permissions:              Read Only (Ask for approval)
  Agents.md:                <none>
  Collaboration mode:       Default
  Session:                  00000000-0000-0000-0000-000000000001

  Token usage:              0 total  (0 input + 0 output)
  5h limit:                 [░░░░░░░░░░░░░░░░░░░░] 0% left
  Weekly limit:             [████████████████░░░░] 80% left
  Extra model Usage limit:  [██████████████░░░░░░] 70% left
