codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_proxy_status_initial.snap
---
source: tui/src/chatwidget/tests/status_command_tests.rs
expression: lines_to_single_string(&cell.display_lines(100))
---
/status

  >_ OpenAI Codex (v0.0.0)

  Model:               GPT-5.6-Sol (reasoning low, summaries auto)
  Directory:           /tmp/project
  Permissions:         Read Only (Ask for approval)
  Agents.md:           <none>
  Collaboration mode:  Default

  Token usage:         0 total  (0 input + 0 output)
  Limits:              refresh requested; run /status again shortly.
